--- a/PhotoSiteWork/style.css
+++ b/PhotoSiteWork/style.css
@@ -137,7 +137,7 @@ header input{
 }
 .questions{
     width: 100vw;
-    height: 90vh;
+    /* height: 90vh; */
     background-color: rgb(62, 141, 115);
 }
 .textFAQ{
@@ -169,17 +169,55 @@ header input{
     font-size: 1.5rem;
     color: darkslategrey;
     padding-right: 1vw;
+    /* transition: all 0.5s; */
 }
 .answer{
     width: 60vw;
     padding-top: 1vh;
     padding-bottom: 1vh;
-    height: 6vh;
     display: none;
     transition: 1s;
+    padding: 1vw;
 }
 .textBlockEvent{
     display: block;
-    height: 6vh;
     background-color: white;
+    font-size: 1.3rem;
+}
+/* .faqs button:hover{
+    transform: rotateX(180deg);
+} */
+.photographers{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(62, 141, 115);
+    padding-top: 20vh;
+}
+.textPhotographers{
+    font-size: 2.5rem;
+    color: white;
+    padding-left: 10vw;
+}
+.photographerList{
+    padding-top: 3vh;
+    justify-content: space-between;
+    padding-left: 10vw;
+    padding-right: 10vw;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+}
+.portfolio{
+    height: 50vh;
+    width: 25vw;
+    background-color: rgb(137, 211, 191);
+    align-items: center;
+    justify-content: center;
+}
+.circlePortret{
+    width: 10vw;
+    height: 10vw;
+    border-radius: 50% 50% 50% 50%;
+    background: url(img/baw-pic1.jpg);
+    align-items: center;
 }
