--- a/PhotoSiteWork/style.css
+++ b/PhotoSiteWork/style.css
@@ -13,6 +13,8 @@ header{
     padding-left: 4.5vw;
     padding-right: 5vw;
     color: white;
+    z-index: 100;
+
 }
 header h1{
     font-size: 3rem;
@@ -76,7 +78,7 @@ header input{
     padding-left: 10vw;
 }
 .exampleInlineBlocks{
-    padding-top: 10vh;
+    padding-top: 6vh;
     justify-content: space-between;
     padding-left: 10vw;
     padding-right: 10vw;
@@ -85,37 +87,48 @@ header input{
     flex-direction: row;
 }
 .exampleBlock{
-    height: 26vh;
-    width: 12vw;
+    height: 380px;
+    width: 250px;
     background-color: white;
+    overflow: hidden;
+    position: relative;
 }
 .shortInfo1{
-    height: 20vh;
-    width: 12vw;
     background-color: powderblue;
-    padding-top: 15vh;
     transition: all 1s;
 }
 .bgpic1{
-    background: url(img/color-pic1.jpg) no-repeat center/110%; 
+    max-width: 100%;
+    min-width: 100%;
+    position: relative;
+    object-fit: contain;
 }
 .bgpic1:hover{
     transform: scale(1.2);
 }
 .bgpic2{
-    background: url(img/color-pic2.jpg) no-repeat center/110%;
+    max-width: 100%;
+    min-width: 100%;
+    position: relative;
+    object-fit: contain;
 }
 .bgpic2:hover{
     transform: scale(1.2);
 }
 .bgpic3{
-    background: url(img/color-pic4.jpg) no-repeat center/110%;
+    max-width: 100%;
+    min-width: 100%;
+    position: relative;
+    object-fit: contain;
 }
 .bgpic3:hover{
     transform: scale(1.2);
 }
 .bgpic4{
-    background: url(img/color-pic3.jpg) no-repeat center/110% ;
+    max-width: 100%;
+    min-width: 100%;
+    position: relative;
+    object-fit: contain;
 }
 .bgpic4:hover{
     transform: scale(1.2);
@@ -124,16 +137,28 @@ header input{
     width: 5vw;
     height: 5vh;
     background-color: darkslategrey;
-    text-align: center;
     font-size: 1.5rem;
     color: white;
-    padding-top: 1vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 68px;
 }
 .shortInfo2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     font-size: 1.2rem;
     color: darkslategrey;
     align-items: center;
+    position: absolute;
+    z-index: 10;
+    background-color: white;
+    bottom: 0;
+    height: 70px;
+    width: 100%;
 }
 .questions{
     width: 100vw;
@@ -169,15 +194,14 @@ header input{
     font-size: 1.5rem;
     color: darkslategrey;
     padding-right: 1vw;
-    /* transition: all 0.5s; */
 }
 .answer{
     width: 60vw;
     padding-top: 1vh;
     padding-bottom: 1vh;
     display: none;
-    transition: 1s;
     padding: 1vw;
+    transition: all 1s;
 }
 .textBlockEvent{
     display: block;
@@ -211,13 +235,29 @@ header input{
     height: 50vh;
     width: 25vw;
     background-color: rgb(137, 211, 191);
-    align-items: center;
+    position: relative;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .circlePortret{
     width: 10vw;
     height: 10vw;
-    border-radius: 50% 50% 50% 50%;
     background: url(img/baw-pic1.jpg);
-    align-items: center;
+    border-radius: 50%;
+}
+.nameAndExperience{
+    padding-top: 20px;
+    text-align: center;
+    color: rgb(31, 53, 53);
+    font-size: 1.5rem;
+}
+.infoPerson{
+    text-align: center;
+    color: rgb(31, 53, 53);
+    font-size: 1.1rem;
+}
+.bi{
+    font-size: 1.8rem;
 }
