--- a/PhotoSiteWork/style.css
+++ b/PhotoSiteWork/style.css
@@ -217,7 +217,6 @@ header input{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    
 }
 .faqs button{
     font-size: 1.5rem;
@@ -231,6 +230,7 @@ header input{
     display: none;
     padding: 1vw;
     transition: all 1s;
+    color: darkslategrey;
 }
 .textBlockEvent{
     display: block;
